syntax = "proto3";
option csharp_namespace = "OzonEdu.MerchandiseService.Grpc";
package MerchandiseService;

service MerchandiseServiceGrpc {
  rpc OrderMerch (OrderMerchRequest) returns (OrderMerchResponse);
  rpc GetIssuedMerchInfo (GetIssuedMerchInfoRequest) returns (GetIssuedMerchInfoResponse);
}

message OrderMerchRequest {
}

message OrderMerchResponse {
}

message GetIssuedMerchInfoRequest {
}

message GetIssuedMerchInfoResponse {
}
